Clean up new & edit task form input field button border alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -1591,7 +1591,7 @@ input[name=taskCompleteStatus] {
 	padding-top: .60rem;
 /*    padding-right: .2rem;*/
     padding-left: .75rem;
-    padding-bottom: .75rem;
+    padding-bottom: .65rem;
     color: #34AFA9;
 /*	margin-left: -.5rem;*/
 /*    background-color: #f2f2f2;*/
